k8s-cluster/deploy-template/cluster-setup/ingress/test-execution-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-execution-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-tls-secret: "test-execution/tls-ca-certificate"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - ${TEST_EXECUTION_FQDN}
    secretName: test-execution-ingress-tls
  rules:
  - host: ${TEST_EXECUTION_FQDN}
    http:
      paths:
      - path: /_dummy
        pathType: Prefix
        backend:
          service:
            name: dummy-service
            port:
              number: 80
